--- a/softwerkskammer/lib/groups/views/group-mixins.pug
+++ b/softwerkskammer/lib/groups/views/group-mixins.pug
@@ -10,7 +10,7 @@ mixin grouplist(title, groupsOfAKind)
         | &nbsp;&nbsp;
         if (wikisubdirs && wikisubdirs.indexOf(group.id) > -1)
           span.tooltiplabel(data-original-title=t('wiki.gotowiki'))
-            a(href='/wiki/' + group.id + '/'): i.fa.fa-book.fa-fw
+            a(href='/wiki/' + group.id + '/'): i.fas.fa-book.fa-fw
 
 mixin placeGroupLabels(groupsOfAKind)
   each group in groupsOfAKind
