--- a/softwerkskammer/lib/groups/views/index.pug
+++ b/softwerkskammer/lib/groups/views/index.pug
@@ -10,7 +10,7 @@ block content
       .page-header
         .btn-group.float-right
           if (accessrights.isSuperuser())
-            a.btn.btn-light(href='new/', title=t('groups.new')): i.fa.fa-file-o.fa-fw
+            a.btn.btn-light(href='new/', title=t('groups.new')): i.far.fa-file.fa-fw
         h1 #{t('groups.groups')}
   .row
     .col-lg-6
