--- a/softwerkskammer/lib/payment/views/paymentFormComponents.pug
+++ b/softwerkskammer/lib/payment/views/paymentFormComponents.pug
@@ -81,7 +81,7 @@ mixin paymentCreditCard(paymentInfo, placeholder, actionUrl, amount, fee, descri
     .panel-heading
       h4.panel-title #{t('payment.credit_card')} &nbsp;
         small powered by&nbsp;
-        a(href='http://stripe.com'): .fa.fa-cc-stripe
+        a(href='http://stripe.com'): .fab.fa-cc-stripe
     .panel-body
       #charge-error.alert.alert-danger
       p.float-right: img(src='/img/creditcards.png')
