--- a/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
+++ b/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
@@ -8,7 +8,7 @@ block content
       .page-header
         .btn-group.float-right
           a.btn.btn-light(href='../alle/europaweite-veranstaltungen-' + year, title=t('wiki.as_table'))
-            i.fa.fa-table.fa-fw
+            i.fas.fa-table.fa-fw
             | &nbsp;#{t('wiki.as_table')}
         h2 #{t('general.events_in_europe')} #{year}
   .row
