--- a/softwerkskammer/lib/wiki/views/history.pug
+++ b/softwerkskammer/lib/wiki/views/history.pug
@@ -46,7 +46,7 @@ block content
       a.btn.btn-light(href='javascript:history.back()', type='cancel') #{t('general.back')}
       if (accessrights.isRegistered())
         button#rev-compare.btn.btn-light(data-pageName=pageName, data-subdir=subdir)
-          i.fa.fa-stethoscope.fa-fw
+          i.fas.fa-stethoscope.fa-fw
           | &nbsp; #{t('general.compare')}…
     h1 #{subdir}/#{pageName}
       br
