--- a/commonComponents/pug/imageUpload.pug
+++ b/commonComponents/pug/imageUpload.pug
@@ -1,6 +1,6 @@
 mixin selectFileButton(label, extraclasses)
   span.btn.btn-primary.btn-file(class=extraclasses)
-    i.fa.fa-fw.fa-camera
+    i.fas.fa-fw.fa-camera-retro.fa-lg
     | &nbsp; #{t(label)}
     input#input-file(type='file', accept='image/*', name='image')
 
