--- a/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
+++ b/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
@@ -32,7 +32,7 @@ block content
                 for group in groups
                   td.center
                     if member.isInGroup(group.id)
-                      i.fa.fa-check &nbsp;
+                      i.fas.fa-check &nbsp;
       dl.dl-horizontal
         for groupinfo in groupsWithExtraEmailAddresses
           dt #{groupinfo.group}
