--- a/softwerkskammer/lib/members/views/editavatar.pug
+++ b/softwerkskammer/lib/members/views/editavatar.pug
@@ -28,17 +28,17 @@ mixin editavatar(member, returnToParticipantsListing)
             img#preview
           .clearfix
           .btn-group(style='display: table; margin-left: auto; margin-right: auto; margin-top: 5px;')
-            span#rotate-left.btn.btn-sm.btn-light(title=t('photo.rotate-left')): i.fa.fa-fw.fa-rotate-left
-            span#zoom-in.btn.btn-sm.btn-light(title=t('photo.zoom-in')): i.fa.fa-fw.fa-search-plus
-            span#fit.btn.btn-sm.btn-light(title=t('photo.fit')): i.fa.fa-fw.fa-arrows-alt
-            span#zoom-out.btn.btn-sm.btn-light(title=t('photo.zoom-out')): i.fa.fa-fw.fa-search-minus
-            span#rotate-right.btn.btn-sm.btn-light(title=t('photo.rotate-right')): i.fa.fa-fw.fa-rotate-right
+            span#rotate-left.btn.btn-sm.btn-light(title=t('photo.rotate-left')): i.fas.fa-fw.fa-undo
+            span#zoom-in.btn.btn-sm.btn-light(title=t('photo.zoom-in')): i.fas.fa-fw.fa-search-plus
+            span#fit.btn.btn-sm.btn-light(title=t('photo.fit')): i.fas.fa-fw.fa-arrows-alt
+            span#zoom-out.btn.btn-sm.btn-light(title=t('photo.zoom-out')): i.fas.fa-fw.fa-search-minus
+            span#rotate-right.btn.btn-sm.btn-light(title=t('photo.rotate-right')): i.fas.fa-fw.fa-redo
           .btn-group
             span#btn-cancel.btn.btn-sm.btn-danger(title=t('general.cancel'))
-              i.fa.fa-fw.fa-times
+              i.fas.fa-fw.fa-times
               | &nbsp; #{t('general.cancel')}
             button.btn.btn-sm.btn-primary(type='submit', title=t('general.save'))
-              i.fa.fa-fw.fa-check
+              i.fas.fa-fw.fa-check
               | &nbsp; #{t('general.save')}
 
       +hidden('nickname', member.nickname())
