--- a/softwerkskammer/lib/site/views/authenticationRequired.pug
+++ b/softwerkskammer/lib/site/views/authenticationRequired.pug
@@ -8,6 +8,6 @@ block content
       !=t('authentication.required_text', { postProcess: 'pug' })
     .col-lg-6
       h3 #{t('authentication.please_authenticate')}
-      p: a.btn.btn-primary(data-toggle='modal', data-target='#login', href='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
-        i.fa.fa-sign-in.fa-fw
+      p.modaldialog.btn.btn-primary(data-toggle='modal', data-target='#login', data-link='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
+        i.fas.fa-sign-in-alt.fa-fw
         | &nbsp;#{t('general.login')}
