--- a/softwerkskammer/lib/wiki/views/get.pug
+++ b/softwerkskammer/lib/wiki/views/get.pug
@@ -25,11 +25,11 @@ block content
   .row
     .col-12
       .btn-group.float-right
-          a.btn.btn-light(href='/wiki/list/' + subdir + '/', title=t('wiki.all_pages') + ' "' + subdir + '"'): i.fa.fa-list.fa-fw
-          a.btn.btn-light(href='/wiki/versions/' + subdir + '/' + pageName, title=t('wiki.revisions')): i.fa.fa-sort-amount-desc.fa-fw
+          a.btn.btn-light(href='/wiki/list/' + subdir + '/', title=t('wiki.all_pages') + ' "' + subdir + '"'): i.fas.fa-list.fa-fw
+          a.btn.btn-light(href='/wiki/versions/' + subdir + '/' + pageName, title=t('wiki.revisions')): i.fas.fa-sort-amount-down.fa-fw
           if (canEdit)
-            a.btn.btn-light(data-toggle='modal', href='#renameDialog', title=t('general.rename')): i.fa.fa-cogs.fa-fw
-            a.btn.btn-light(href='/wiki/edit/' + subdir + '/' + pageName, title=t('general.edit')): i.fa.fa-edit.fa-fw
+            a.btn.btn-light(data-toggle='modal', href='#renameDialog', title=t('general.rename')): i.fas.fa-cogs.fa-fw
+            a.btn.btn-light(href='/wiki/edit/' + subdir + '/' + pageName, title=t('general.edit')): i.fas.fa-edit.fa-fw
       form.d-print-none.form-search.float-right(action='/wiki/search', method='post')
         +csrf
         input.form-control(type='text', name='searchtext', placeholder=t('wiki.search'))
