--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -15,9 +15,8 @@ block content
       .modal-content
 
   .page-header
-    h2 #{t('dashboard.dashboard')}
-      small
-        p #{t('dashboard.description')}
+    h2 #{t('dashboard.dashboard')} <br>
+      small #{t('dashboard.description')}
   .row
     .col-sm-6
       +my_activities
