--- a/softwerkskammer/lib/members/views/memberlist-mixin.pug
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.pug
@@ -7,11 +7,13 @@ mixin memberlist(members, organizers)
       for member in members
         dt.col-4: .member
           +linkedMember(member.nickname())
+        dd.col-8.mb-0 
           if (member.hasImage())
-            | &nbsp; <a href='#' rel='tooltip' data-content=#{member.nickname()} data-placement="right" title='<div style="height: 128px;"><img src=#{member.avatarUrl(128)} width="128" height="128"/></div>' >
-            img.d-print-none(src=member.inlineAvatar(), width='16', height='16')
-            | </a>
-        dd.col-8.mb-0 #{member.firstname()} #{member.lastname()}
+            a(href='#', rel='tooltip', data-content=member.nickname(), data-placement='right', title='<div style="height: 128px;"><img src=' + member.avatarUrl(128) + ' width="128" height="128"/></div>')
+              img.d-print-none(src=member.inlineAvatar(), width='16', height='16')
+          else
+            img.d-print-none(src='#', width='16', height='16')
+          | &nbsp;#{member.firstname()} #{member.lastname()}
           if member.location()
             |, #{member.location()}
           | &nbsp;
