--- a/softwerkskammer/lib/administration/views/groupTable.pug
+++ b/softwerkskammer/lib/administration/views/groupTable.pug
@@ -31,5 +31,5 @@ block content
                 td: b #{group.id}
                 td #{group.longName}
                 td #{group.emailPrefix}
-                td.ellipsis: span(rel='tooltip', data-placement='left', data-content=group.descriptionHTML()) #{group.description}
+                td.ellipsis: span(rel='tooltip', data-content=group.descriptionHTML()) #{group.description}
                 td #{group.type}
