--- a/softwerkskammer/lib/activityresults/views/get.pug
+++ b/softwerkskammer/lib/activityresults/views/get.pug
@@ -1,7 +1,7 @@
 extends ../../../views/layoutOnlyMain
 
-include  ../../../../commonComponents/pug/formComponents
-include  ../../../../commonComponents/pug/imageUpload
+include  ../../../views/formComponents
+include  ../../../views/imageUpload
 
 block title
   | #{activityResult.id()}
