--- a/softwerkskammer/lib/administration/views/activityTable.pug
+++ b/softwerkskammer/lib/administration/views/activityTable.pug
@@ -1,5 +1,5 @@
 extends ../../../views/layoutOnlyMain
-include ../../../../commonComponents/pug/dataTables-mixin
+include ../../../views/dataTables-mixin
 
 block scripts
   +dataTableImport
