--- a/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
+++ b/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layoutOnlyMain
 include ../../members/views/memberlist-mixin
-include ../../../../commonComponents/pug/dataTables-mixin
+include ../../../views/dataTables-mixin
 
 block scripts
   +dataTableImport
