--- a/softwerkskammer/lib/groups/views/edit.pug
+++ b/softwerkskammer/lib/groups/views/edit.pug
@@ -4,6 +4,13 @@ include groups-forms
 
 block scripts
   script(src='/clientscripts/check-groupform.js')
+  script(src='/clientscripts/bootstrap-colorpicker.min.js')
+    
+block head
+  link(href='/stylesheets/bootstrap-colorpicker.min.css', rel='stylesheet')
+
+block head
+  link(href='/stylesheets/bootstrap-datepicker3.min.css', rel='stylesheet')
 
 block title
   if (group.id)
