--- a/softwerkskammer/lib/groups/views/get.pug
+++ b/softwerkskammer/lib/groups/views/get.pug
@@ -2,7 +2,7 @@ extends ../../../views/layout
 include ../../members/views/memberlist-mixin
 include ../../wiki/views/wiki-mixins
 include ../../activities/views/activities-mixins
-include ../../../../commonComponents/pug/formComponents
+include ../../../views/formComponents
 
 block head
   if (blogposts.length > 0)
