--- a/softwerkskammer/lib/groups/views/groups-forms.pug
+++ b/softwerkskammer/lib/groups/views/groups-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../../commonComponents/pug/formComponents
+include  ../../../views/formComponents
 
 mixin groupform(group, allTypes, organizersChecked)
   form#groupform(action='/groups/submit', method='post')
