--- a/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
+++ b/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../../commonComponents/pug/formComponents
+include  ../../../views/formComponents
 
 mixin mailform(message, regionalgroups, themegroups, massMailing)
   form#mailform(action='/mailsender/send', method='post')
