--- a/softwerkskammer/lib/members/views/editavatar.pug
+++ b/softwerkskammer/lib/members/views/editavatar.pug
@@ -1,5 +1,5 @@
-include ../../../../commonComponents/pug/formComponents
-include ../../../../commonComponents/pug/imageUpload
+include ../../../views/formComponents
+include ../../../views/imageUpload
 
 mixin avatar(member, returnToParticipantsListing)
   if(accessrights.canEditMember(member))
