--- a/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
+++ b/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
@@ -1,7 +1,7 @@
 extends ../../../views/layout
-include  ../../../../commonComponents/pug/formComponents
+include  ../../../views/formComponents
 include ../../members/views/memberlist-mixin
-include ../../../../commonComponents/pug/dataTables-mixin
+include ../../../views/dataTables-mixin
 
 block scripts
   +dataTableImport
