--- a/softwerkskammer/lib/wiki/views/get.pug
+++ b/softwerkskammer/lib/wiki/views/get.pug
@@ -1,5 +1,5 @@
 extends ../../../views/layout
-include  ../../../../commonComponents/pug/formComponents
+include  ../../../views/formComponents
 
 block title
   | #{pageName} : #{subdir}
