--- a/softwerkskammer/lib/activities/views/activities-forms.pug
+++ b/softwerkskammer/lib/activities/views/activities-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../../commonComponents/pug/formComponents
+include  ../../../views/formComponents
 
 mixin activityform(activity, groups, editorNames, participantNames)
   form#activityform(action='/activities/submit', method='post')
