--- a/softwerkskammer/lib/activities/views/get.pug
+++ b/softwerkskammer/lib/activities/views/get.pug
@@ -1,7 +1,7 @@
 extends ../../../views/layout
 include ../../members/views/memberlist-mixin
 include ../../../views/openstreetmaps-component
-include ../../../../commonComponents/pug/formComponents
+include ../../../views/formComponents
 include activities-mixins
 
 block title
