--- a/softwerkskammer/lib/activities/views/index.pug
+++ b/softwerkskammer/lib/activities/views/index.pug
@@ -1,5 +1,5 @@
 extends ../../../views/layout
-include ../../../../commonComponents/pug/formComponents
+include ../../../views/formComponents
 include activities-mixins
 
 block title
