--- a/softwerkskammer/lib/members/views/members-forms.pug
+++ b/softwerkskammer/lib/members/views/members-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../../commonComponents/pug/formComponents
+include  ../../../views/formComponents
 
 mixin memberform(member, regionalgroups, themegroups, tags)
   form#memberform(action='/members/submit', method='post')
