--- a/softwerkskammer/views/errorPages/validationError.pug
+++ b/softwerkskammer/views/errorPages/validationError.pug
@@ -1,3 +1,15 @@
 extends ../layout
 
-include ../../../commonComponents/pug/validationErrorCommon
+block title
+  | #{t('validation.validation_error')}
+block content
+  .col-12
+    .page-header
+      h2 #{t('validation.failed')}
+        small  #{t('validation.validation')}
+      p #{t('validation.validation_text')}
+    ul
+      for error in errors
+        li #{t(error)}
+    p
+      a.btn.btn-default(href='javascript:history.back()') #{t('general.back')}
