--- a/softwerkskammer/views/commonLayout.pug
+++ b/softwerkskammer/views/commonLayout.pug
@@ -44,7 +44,7 @@ html
         .modal-dialog.modal-lg
           .modal-content
       img.d-none.d-print-block(src='/img/Softwerkskammer_Header.png', alt='Softwerkskammer', width='955')
-      p.d-none.d-print-block &nbsp;
+      p.d-none.d-print-float &nbsp;
       nav.navbar.navbar-expand-sm.p-0.navbar-light.bg-light.fixed-top.d-print-none(role='navigation')
         +topNavbar
       .container-fluid.p-0.p-md-auto
