remove unused stuff

--- a/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
+++ b/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
@@ -28,7 +28,7 @@ block content
           h2 #{activity.title()} #{' '}
             small #{t('activities.waitinglist')}
             a.btn.float-right.btn-light(href=activity.fullyQualifiedUrl()) Zurück
-        .panel.scrollable-box
+        .panel
           table.table.table-sm.table-hover.table-striped#waitinglisttable
             thead
               tr
