--- a/softwerkskammer/views/layout.pug
+++ b/softwerkskammer/views/layout.pug
@@ -1,7 +1,6 @@
 extends commonLayout
 block specific
-  .col-md-8.d-print-none
-  .col-md-12.d-print-block
+  .col-md-8
     if (statusmessage)
       +notificationsBlock(statusmessage)
     block content
@@ -15,6 +14,11 @@ block specific
         h1 Wiki Links
         h4
           a(href='/wiki/events/2018') #{t('general.events_in_europe')} 2018
+          br
+          small.text-muted.
+            #{t('general.events_in_europe_desc')}
+        h4
+          a(href='/wiki/events/2019') #{t('general.events_in_europe')} 2019
           br
           small.text-muted.
             #{t('general.events_in_europe_desc')}
