Now printing as desired (fullwidth)

--- a/softwerkskammer/views/layout.pug
+++ b/softwerkskammer/views/layout.pug
@@ -1,6 +1,6 @@
 extends commonLayout
 block specific
-  .col-md-8
+  .col
     if (statusmessage)
       +notificationsBlock(statusmessage)
     block content
