--- a/softwerkskammer/lib/site/views/index.pug
+++ b/softwerkskammer/lib/site/views/index.pug
@@ -4,6 +4,10 @@ include ../../groups/views/group-mixins
 
 block title
   | #{t('general.welcome')}
+  
+block head
+  +addMapStyle
+  
 block content
   .row
     .col-12
@@ -32,9 +36,7 @@ block content
             wie Clean Code, TDD etc. austauschen möchtest,
         p Dann ist die Softwerkskammer etwas für Dich!
 
-    .col-lg-6.d-inline.d-lg-none.groupsmap(style='position: relative; width: 100%; height: 100px; background-image:url("/img/map.svg"); background-size: 100% 100%; background-repeat: no-repeat;')
-      +placeGroupLabels(regionalgroups)
-    .col-lg-6.d-none.d-lg-inline.groupsmap(style='position: relative; width: 50%; height: 100px; background-image:url("/img/map.svg"); background-size: 100% 100%; background-repeat: no-repeat;')
+    .col-lg-6.groupsmap
       +placeGroupLabels(regionalgroups)
   if (language === 'de')
     .row
@@ -55,9 +57,4 @@ block content
           | Wir wollen die richtige Software entwickeln, und wir wollen die Software richtig entwickeln.
 
 block scripts
-  script.
-    function adjustMapsize() {
-      $('.groupsmap').each(function() {$(this).height(1.289 * $(this).width()); })
-    }
-    $(document).ready(adjustMapsize);
-    $.event.add(window, 'resize', adjustMapsize);
+  +adjustMapScript
