layout fix for bottom margin

--- a/softwerkskammer/views/commonLayout.pug
+++ b/softwerkskammer/views/commonLayout.pug
@@ -48,7 +48,7 @@ html
       nav.navbar.navbar-expand-sm.p-0.navbar-light.bg-light.fixed-top.d-print-none(role='navigation')
         +topNavbar
       .container-fluid.p-0.p-md-auto
-        .row.main
+        .row.main.pb-4
           block specific
       +bottomNavbar
 
