eliminating moment from frontend

--- a/softwerkskammer/lib/activities/views/gdcr.pug
+++ b/softwerkskammer/lib/activities/views/gdcr.pug
@@ -45,6 +45,5 @@ block scripts
 
   if (activities.length > 0)
     script.
-      displayedActivityStart = moment('#{activities[0].startMoment().toISOString()}');
-      displayedActivityEnd = moment('#{activities[0].endMoment().toISOString()}');
+      displayedActivityStart = '#{activities[0].startMoment().toISOString()}';
 //- cannot write "#{activity.startMoment()}" as we need to produce a string to eval in the client
