--- a/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
+++ b/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
@@ -47,18 +47,18 @@ block content
 block scripts
   script.
     $(document).ready(function () {
-      initParameterisedCalendar('#eventsJan', #{year} + '-01-01');
-      initParameterisedCalendar('#eventsFeb', #{year} + '-02-01');
-      initParameterisedCalendar('#eventsMar', #{year} + '-03-01');
-      initParameterisedCalendar('#eventsApr', #{year} + '-04-01');
-      initParameterisedCalendar('#eventsMai', #{year} + '-05-01');
-      initParameterisedCalendar('#eventsJun', #{year} + '-06-01');
-      initParameterisedCalendar('#eventsJul', #{year} + '-07-01');
-      initParameterisedCalendar('#eventsAug', #{year} + '-08-01');
-      initParameterisedCalendar('#eventsSep', #{year} + '-09-01');
-      initParameterisedCalendar('#eventsOkt', #{year} + '-10-01');
-      initParameterisedCalendar('#eventsNov', #{year} + '-11-01');
-      initParameterisedCalendar('#eventsDez', #{year} + '-12-01');
+      initParameterisedCalendar('eventsJan', #{year} + '-01-01');
+      initParameterisedCalendar('eventsFeb', #{year} + '-02-01');
+      initParameterisedCalendar('eventsMar', #{year} + '-03-01');
+      initParameterisedCalendar('eventsApr', #{year} + '-04-01');
+      initParameterisedCalendar('eventsMai', #{year} + '-05-01');
+      initParameterisedCalendar('eventsJun', #{year} + '-06-01');
+      initParameterisedCalendar('eventsJul', #{year} + '-07-01');
+      initParameterisedCalendar('eventsAug', #{year} + '-08-01');
+      initParameterisedCalendar('eventsSep', #{year} + '-09-01');
+      initParameterisedCalendar('eventsOkt', #{year} + '-10-01');
+      initParameterisedCalendar('eventsNov', #{year} + '-11-01');
+      initParameterisedCalendar('eventsDez', #{year} + '-12-01');
     });
   style.
     .fc-content {
