--- a/softwerkskammer/lib/groups/views/get.pug
+++ b/softwerkskammer/lib/groups/views/get.pug
@@ -33,6 +33,9 @@ block content
         strong #{t('general.address')}: #{' '}
         a(href='mailto:' + group.id + '@softwerkskammer.org')
           | #{group.id}@softwerkskammer.org
+      p
+        a(href='/mailsender/contactGroupContactPersons/' + group.id)
+          | Ansprechpartner kontaktieren
   .row
     .col-lg-6
       | !{group.descriptionHTML()}
